// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jsconfig.json CLI should allow cli args overrides 1`] = `
Object {
  "compilerOptions": Object {
    "baseUrl": "./myApp/custom/location",
    "checkJs": false,
    "module": "amd",
    "moduleResolution": "classic",
    "paths": Object {
      "@/components/*": Array [
        "components/*",
      ],
      "@/pages/*": Array [
        "pages/*",
      ],
      "@/styles/*": Array [
        "styles/*",
      ],
      "myApp/*": Array [
        "../../../src/*",
      ],
    },
    "resolveJsonModule": true,
    "target": "es3",
  },
  "exclude": Array [
    "dist",
    "node_modules",
    "build",
    ".vscode",
    ".next",
    "coverage",
    ".npm",
    ".yarn",
  ],
  "typeAcquisition": Object {
    "enable": true,
    "include": Array [
      "react",
      "react-dom",
    ],
  },
}
`;

exports[`jsconfig.json CLI should generate basic jsconfig.json 1`] = `
Object {
  "compilerOptions": Object {
    "checkJs": false,
    "module": "es2015",
    "moduleResolution": "node",
    "resolveJsonModule": true,
    "target": "es2020",
  },
  "exclude": Array [
    "dist",
    "node_modules",
    "build",
    ".vscode",
    ".nuxt",
    "coverage",
    "jspm_packages",
    "tmp",
    "temp",
    "bower_components",
    ".npm",
    ".yarn",
  ],
  "typeAcquisition": Object {
    "enable": true,
  },
}
`;

exports[`jsconfig.json CLI should generate jsconfig.json for default template correctly 1`] = `
Object {
  "compilerOptions": Object {
    "checkJs": false,
    "module": "es2015",
    "moduleResolution": "node",
    "resolveJsonModule": true,
    "target": "es2020",
  },
  "exclude": Array [
    "dist",
    "node_modules",
    "build",
    ".vscode",
    ".nuxt",
    "coverage",
    "jspm_packages",
    "tmp",
    "temp",
    "bower_components",
    ".npm",
    ".yarn",
  ],
  "typeAcquisition": Object {
    "enable": true,
  },
}
`;

exports[`jsconfig.json CLI should generate jsconfig.json for nextjs template correctly 1`] = `
Object {
  "compilerOptions": Object {
    "baseUrl": ".",
    "checkJs": false,
    "module": "es2015",
    "moduleResolution": "node",
    "paths": Object {
      "@/components/*": Array [
        "components/*",
      ],
      "@/pages/*": Array [
        "pages/*",
      ],
      "@/styles/*": Array [
        "styles/*",
      ],
    },
    "resolveJsonModule": true,
    "target": "es2020",
  },
  "exclude": Array [
    "dist",
    "node_modules",
    "build",
    ".vscode",
    ".next",
    "coverage",
    ".npm",
    ".yarn",
  ],
  "typeAcquisition": Object {
    "enable": true,
    "include": Array [
      "react",
      "react-dom",
    ],
  },
}
`;

exports[`jsconfig.json CLI should generate jsconfig.json for node template correctly 1`] = `
Object {
  "compilerOptions": Object {
    "checkJs": false,
    "module": "es2015",
    "moduleResolution": "node",
    "resolveJsonModule": true,
    "target": "es2020",
  },
  "exclude": Array [
    "dist",
    "node_modules",
    "build",
    ".vscode",
    "coverage",
    ".npm",
    ".yarn",
  ],
  "typeAcquisition": Object {
    "enable": true,
    "include": Array [
      "node",
    ],
  },
}
`;

exports[`jsconfig.json CLI should generate jsconfig.json for react template correctly 1`] = `
Object {
  "compilerOptions": Object {
    "baseUrl": "src",
    "checkJs": false,
    "module": "es2015",
    "moduleResolution": "node",
    "resolveJsonModule": true,
    "target": "es2020",
  },
  "exclude": Array [
    "dist",
    "node_modules",
    "build",
    ".vscode",
    "coverage",
    ".npm",
    ".yarn",
  ],
  "typeAcquisition": Object {
    "enable": true,
    "include": Array [
      "react",
      "react-dom",
      "jest",
      "testing-library__jest-dom",
    ],
  },
}
`;

exports[`jsconfig.json CLI should generate jsconfig.json for vuejs template correctly 1`] = `
Object {
  "compilerOptions": Object {
    "baseUrl": ".",
    "checkJs": false,
    "module": "es2015",
    "moduleResolution": "node",
    "paths": Object {
      "@/*": Array [
        "./src/*",
      ],
    },
    "resolveJsonModule": true,
    "target": "es2020",
  },
  "exclude": Array [
    "dist",
    "node_modules",
    "build",
    ".vscode",
    ".nuxt",
    "coverage",
    ".npm",
    ".yarn",
  ],
  "typeAcquisition": Object {
    "enable": true,
  },
}
`;

exports[`jsconfig.json CLI should merge path aliases with default template 1`] = `
Object {
  "compilerOptions": Object {
    "baseUrl": "./myApp/custom/location",
    "checkJs": false,
    "module": "es2015",
    "moduleResolution": "node",
    "paths": Object {
      "@/components/*": Array [
        "components/*",
      ],
      "@/pages/*": Array [
        "pages/*",
      ],
      "@/styles/*": Array [
        "styles/*",
      ],
      "myApp/*": Array [
        "../../../src/*",
      ],
    },
    "resolveJsonModule": true,
    "target": "es2020",
  },
  "exclude": Array [
    "dist",
    "node_modules",
    "build",
    ".vscode",
    ".next",
    "coverage",
    ".npm",
    ".yarn",
  ],
  "typeAcquisition": Object {
    "enable": true,
    "include": Array [
      "react",
      "react-dom",
    ],
  },
}
`;

exports[`jsconfig.json CLI should work with custom cwd 1`] = `
Object {
  "compilerOptions": Object {
    "baseUrl": ".",
    "checkJs": false,
    "module": "es2015",
    "moduleResolution": "node",
    "paths": Object {
      "myApp/*": Array [
        "src/*",
      ],
    },
    "resolveJsonModule": true,
    "target": "es2020",
  },
  "exclude": Array [
    "dist",
    "node_modules",
    "build",
    ".vscode",
    ".nuxt",
    "coverage",
    "jspm_packages",
    "tmp",
    "temp",
    "bower_components",
    ".npm",
    ".yarn",
  ],
  "typeAcquisition": Object {
    "enable": true,
  },
}
`;

exports[`jsconfig.json CLI should work with custom webpack location and baseUrl 1`] = `
Object {
  "compilerOptions": Object {
    "baseUrl": "./myApp/custom/location",
    "checkJs": false,
    "module": "es2015",
    "moduleResolution": "node",
    "paths": Object {
      "myApp/*": Array [
        "../../../src/*",
      ],
    },
    "resolveJsonModule": true,
    "target": "es2020",
  },
  "exclude": Array [
    "dist",
    "node_modules",
    "build",
    ".vscode",
    ".nuxt",
    "coverage",
    "jspm_packages",
    "tmp",
    "temp",
    "bower_components",
    ".npm",
    ".yarn",
  ],
  "typeAcquisition": Object {
    "enable": true,
  },
}
`;
